# 0_10_rust

1-guessing-game/src/: main.rs
axum/: Cargo.toml
axum/src/: lib.rs  main.rs
axum/src/auth/: mod.rs
axum/src/manga/: mod.rs
axum/src/manga/controller/: mod.rs
axum/src/manga/dto/: mod.rs
axum/src/manga/enums/: mod.rs
axum/src/manga/middlewares/: mod.rs
axum/src/manga/model/: mod.rs
axum/src/utils/: mod.rs
axum/src/utils/http_reponse/: error.rs  success.rs
axum2/: Cargo.toml
axum2/src/: lib.rs  main.rs
headless_cmp/: Cargo.toml
html-scrapper/: Cargo.toml
html-scrapper/src/: main.rs
libft/: Cargo.toml
libft/src/: lib.rs  main.rs
libft/src/libc/: ft_bzero.rs  ft_memcpy.rs  ft_memset.rs  mod.rs
parallel/src/: main.rs
serde-app/: Cargo.toml
src/: main.rs
src/excution/: mod.rs  task.rs  task_status.rs
src/parser/: argument.rs  command.rs  mod.rs  parsing_error.rs
strsplit/src/: main.rs
tablify/: Cargo.toml
tablify/src/: main.rs
todo-list/src/excution/: task_manager.rs
todo_list_v2/: Cargo.toml
todo_list_v2/src/: main.rs
x-todo-list/src/parser/: command.rs
