[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version= "1", features = ["full"]}
# Axum
axum = "0.5"
cargo-watch = "8.5.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
anyhow = "1"
